--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,12 @@
 {
-  "dependencies": {
-    "discord.js": "^13.10.2",
-    "dotenv": "^16.0.1"
-  }
+  "name": "mass_unban",
+  "version": "1.0.0",
+  "description": "Easily unban all members in a server",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "author": "shifts",
+  "license": "ISC"
 }
